Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98988

Qt bugs when portal implementation is not available

XMLWordPrintable

    • Linux/Wayland
    • fb981a0954 (qt/qtbase/dev) fb981a0954 (qt/tqtc-qtbase/dev) db3a6330cf (qt/qtbase/6.3) db3a6330cf (qt/tqtc-qtbase/6.3) c5883aeb88 (qt/qtbase/6.4) c5883aeb88 (qt/tqtc-qtbase/6.4), bbfdf544f (tqtc/lts-5.15)

      There are 2 bugs with file opening while doing so in flatpak environment:

      If dbus is available and Qt detects that it being executed in flatpak environment, but dbus returns that portal implementation is not available, Qt silently fails, so "open file" button does nothing instead of displaying (usual, non-portal) "Open file" dialog.

      If dbus is not available, but Qt detects that it being executed in flatpak environment, pushing "Open file" button hangs whole UI and the application is not responsive until I restart it.

      Steps to reproduce:

      For the first case:

      1. Install flatpak, but without portal implementation (like xdg-desktop-portal-gtk or xdg-desktop-portal-kde).
      2. Open flatpaked Qt app that supports portals (like qBittorrent).
      3. Push "Open file" button.

      For the second:

      1. Install flatpak, with or without portal implementation.
      2. Install the same app as above
      3. Execute flatpak app as `env -u DBUS_SESSION_BUS_ADDRESS flatpak run ...`

        For Gerrit Dashboard: QTBUG-98988
        # Subject Branch Project Status CR V

            ilya-fedin Ilya Fedin
            alandiwix Alan Diwix
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes